--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,19 +3,45 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --foreground-rgb: 0, 0, 0;
+  --background-start-rgb: 214, 219, 220;
+  --background-end-rgb: 255, 255, 255;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+.glass-effect {
+  background: rgba(255, 255, 255, 0.25);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
+.page-transition {
+  @apply transition-opacity duration-500;
+}
+
+/* Animation classes pour GSAP */
+.fade-in,
+.filiere-card {
+  opacity: 1;
+  will-change: transform, opacity;
+}
+
+/* Ajoutez des styles de base pour le texte */
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  @apply text-gray-800;
+  overflow-x: hidden;
+  position: relative;
+  background-color: black;
+}
+
+h1,
+h2,
+h3 {
+  @apply text-gray-900;
+}
+
+.page-content {
+  position: relative;
+  width: 100%;
+  background: linear-gradient(to bottom right, #eff6ff, #f5f3ff);
 }
